--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
     <playn.version>1.7.2</playn.version>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>com.threerings</groupId>
+      <artifactId>tripleplay</artifactId>
+      <version>${playn.version}</version>
+    </dependency>
+  </dependencies>
+
   <profiles>
     <profile>
       <id>java</id>
