--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ before_install:
   - git clone https://github.com/threerings/tripleplay
 
 install:
-  - cd playn && mvn install
-  - cd tripleplay && mvn install
+  - (cd playn && mvn install)
+  - (cd tripleplay && mvn install)
